# stm32f429i-disc1-hello-world

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Drivers  LICENSE  README.md
Core/Inc/: ili9341.h  l3gd20.h  log.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: ili9341.c  l3gd20.c  log.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
